--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Stormy</string>
     <string name="action_settings">Settings</string>
+    <string name="error_title">Opps!</string>
+    <string name="error_message">There was an error! Please try again!</string>
+    <string name="error_ok_button_text">ok</string>
 </resources>
